syntax = "proto3";
package Greete;

service Greeter{
	rpc GreeterService(HelloRequest) returns (HelloReply);
	rpc GreeteServerStream(GreetManyTimeRequest) returns (stream GreetManyTimeResponse);
	rpc GreeteClientStream(stream GreetManyTimeRequest) returns (GreetManyTimeResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message GreetManyTimeRequest{
	string message =1;
}
message GreetManyTimeResponse{
	string message =1;
}

